[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/OpenType-TT/UT Shadigo Trial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/DoorPrompt.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.305882, 0.203922, 0.180392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.427451, 0.298039, 0.254902, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 1 )

[node name="DoorPrompt" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PromptPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -20.0
margin_right = 95.0
margin_bottom = 20.0
rect_scale = Vector2( 1.2, 1.2 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PromptPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.0
margin_top = -20.0
margin_right = 86.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.878431, 0.509804, 1 )
text = "Press [Q] to enter"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessagePanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -175.0
margin_top = -188.0
margin_right = 175.0
margin_bottom = -68.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoorLabel" type="Label" parent="MessagePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.573
margin_top = -44.2114
margin_right = 134.427
margin_bottom = 44.7886
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.878431, 0.509804, 1 )
text = "Door Message"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
